# ai-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
deploy/kubernetes/: README.md  (+4 more)
services/ai-core/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/ai-core/ai_assistant/: __init__.py  config.py  main.py
services/ai-core/ai_assistant/api/: deps.py
services/ai-core/ai_assistant/domain/: models.py
services/ai-core/ai_assistant/embeddings/: __init__.py  factory.py  http_openai.py
services/ai-core/ai_assistant/ingestion/: bundled_corpus.py  corpus_fixtures.py  ingest_cli.py  manifest_corpus.py
services/ai-core/ai_assistant/llm/: __init__.py  openai_compatible.py
services/ai-core/ai_assistant/orchestration/: contracts.py  graph_state.py  rag_graph.py
services/ai-core/ai_assistant/persistence/: __init__.py  audit.py  db.py  models.py
services/ai-core/ai_assistant/search/: protocol.py  qdrant_retriever.py  runtime.py  stub_retriever.py  types.py
services/ai-core/ai_assistant/services/: assist_service.py
services/ai-core/ai_assistant/telemetry/: __init__.py  setup.py
services/ai-core/ai_search_assistant/: __init__.py  config.py  main.py
services/ai-core/ai_search_assistant/api/: deps.py
services/ai-core/ai_search_assistant/domain/: ingest_models.py
services/ai-core/ai_search_assistant/embeddings/: factory.py  fastembed_backend.py
services/ai-core/tests/: test_config_llm.py  test_document_extract.py  test_ingest_uploads.py  test_manifest_corpus.py  test_otel_config.py  test_stub_retriever.py  test_text_chunker.py
(+87 files in other folders)
